# aaargh

./: .gitattributes  Cargo.toml  LICENSE  README.md  aaargh.org
input/: Test.java  output1.out  output2.out  test.cpp  test.py
src/: cli.rs  diff.rs  errors.rs  exec.rs  fcheck.rs  main.rs
test/: ConvIntervals.java  ans.txt  input.txt  readme.md  test.cpp
test/code/: Haircut.java  checker.cpp  checker.py  correct.py  gen.py  test.cpp
test/files/input/: 2.in  3.in  4.in
test/files/output/: 2.out  3.out  4.out
test/input/: 1.in  3.in
test/output/: 1.out
test/std/input/: 2.in  4.in
test/std/output/: 2.out  3.out  4.out
