[package]
name = "aargh"
version = "0.4.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
anyhow = "1.0"

regex = "1.6"

# general bs that shouldn't have to be imported
colored = "2.0"
strum = "0.24"
strum_macros = "0.24"
is_executable = "1.0"
